[package]
name = "moka-driver"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moka"
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
moka = { version = "0.12.7", features = ["sync"] }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
