[package]
name = "moka-driver"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moka"
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
# moka = { version = "0.12.7", features = ["sync", "future"] }
moka = { git = "https://gitlab.com/moka-labs/moka-gh249-support-w-tinylfu/moka.git", branch = "w-tinylfu", features = [
    "sync",
    "future",
] }
smol = "2.0.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
